Fixed alignment of main title in Admin
Ref DES-188

- the alignment of the main page title and the site title in the sidebar was off
- also the top right dropdown's vertical positioning was off

--- a/ghost/admin/app/styles/layouts/dashboard.css
+++ b/ghost/admin/app/styles/layouts/dashboard.css
@@ -1059,7 +1059,7 @@ Dashboard Attribution */
 }
 
 .gh-dashboard .gh-canvas-header.sticky .gh-dashboard-select {
-    top: 8px !important;
+    top: 0px !important;
     right: -6px !important;
 }
 
@@ -3001,7 +3001,7 @@ Share publication modal */
     margin: 32px 0 0 0;
 }
 
-.gh-share-links li { 
+.gh-share-links li {
     font-size: 1.5rem;
     font-weight: 600;
     color: var(--darkgrey);
@@ -3056,7 +3056,7 @@ span.tip {
     display: block;
 }
 
-span.tip a { 
+span.tip a {
     text-decoration: underline;
     color: var(--midgrey);
 }
